# 2024-ME433-NN

./: README.md  test.c
hmwk 12/project/: CMakeLists.txt  project.c
hmwk 13/: CMakeLists.txt
hmwk 13 actual/project/: main.c
hmwk 13 debugging/: CEE_216_Computer_Lab_1.ipynb
hmwk 13 inter/project/: CMakeLists.txt  main.c
hmwk 13/dev_hid_composite/: CMakeLists.txt  main.c
hmwk 13/project/: CMakeLists.txt  main.c  usb_descriptors.c
hmwk 14/: ME433_Hmwk_14.ipynb
hmwk 16 test/project/: main.c
hmwk 16/project/: CMakeLists.txt  main.c
hmwk 2/: CMakeLists.txt
hmwk 2/blink/: CMakeLists.txt
hmwk 2/project/: CMakeLists.txt  blink.c
hmwk 3/: CMakeLists.txt
hmwk 3/project/: CMakeLists.txt  hmwk3.c
hmwk 4/project/: CMakeLists.txt  main.c
hmwk 5/project/: CMakeLists.txt  main.c
hmwk 6/project/: CMakeLists.txt  main.c
hmwk 7/project/: CMakeLists.txt  main.c  ssd1306.c  ssd1306.h  uart.c  uart.h
hmwk 9/project/: CMakeLists.txt  project.c
